fix: findAndReplce don't remove & Unable to align lines

--- a/aquamarine-core/src/main/resources/css/editor/findAndReplace.css
+++ b/aquamarine-core/src/main/resources/css/editor/findAndReplace.css
@@ -54,7 +54,7 @@
 /*    -fx-border-radius: 0;*/
 /*}*/
 
-.findClose {
+.findCloseBtn {
     -fx-background-image: url('../../img/titleBar/force/x.png');
 }
 
